--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  height: 100%;
+  background-color: rgb(39 39 42);
+}
 /*
 body {
   margin: 0;
