--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  height: 100%;
-  background-color: rgb(24 24 27);
+@layer base {
+  html,
+  body {
+    height: 100%;
+    background-color: rgb(24 24 27);
+    -webkit-tap-highlight-color: transparent;
+  }
 }
+
 /*
 body {
   margin: 0;
