added price toggle funct

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@
     background-color: rgb(24 24 27);
     -webkit-tap-highlight-color: transparent;
   }
+  input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number'] {
+    -webkit-appearance: none;
+    -moz-appearance: textfield !important;
+  }
 }
 
 /*
