created authForm, changed font, changed auth pages UI, added auth error handling

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +10,7 @@
     height: 100%;
     background-color: rgb(24 24 27);
     -webkit-tap-highlight-color: transparent;
+    font-family: 'Nunito sans', sans-serif;
   }
   input[type='number']::-webkit-outer-spin-button,
   input[type='number']::-webkit-inner-spin-button,
